# RLC_task_solution

./: .gitignore  Dockerfile  README.md  alembic.ini  config.yaml.template  docker-compose.yaml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2024-02-07-2007-faf81958be36.py
app/: config.py  dependencies.py  main.py  models.py
app/core/: auth.py  database.py  routers.py  token.py
app/crud/: records_crud.py  users_crud.py
app/routers/: records.py  users.py
app/schemas/: record.py  user.py
tests/: conftest.py  test_records.py  test_users.py
